tests/fixtures/invalid/round_set_int.py
# Cannot call round() with Set[int], Int
x = round({1, 2, 3}, 1)
